== 0.7.0 Bionic Pickle release
 * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script,
   closes #28 [Alex MacCaw]

== 0.6.3 Ninja Cookie release
 * Add tasks for Vlad the Deployer in example/vlad.rake [cnantais]
 * Add Ramaze Rackup config file in example dir [tmm1]
   Use like this from you Ramaze app dir:
   
     thin start -r /path/to/thin/example/ramaze.ru
   
 * Add the --rackup option to load a Rack config file instead of the Rails adapter.
   So you can use any framework with the thin script and start cluster and stuff like that.
   A Rack config file is one that is usable through the rackup command and looks like this:
     
     use Rack::CommonLogger
     run MyCrazyRackAdapter.new(:uterly, 'cool')
     
   Then use it with thin like this:
     
     thin start --rackup config.ru
     
 * thin config --chrdir ... -C thin/yml do not change current directory anymore, fixes #33.
 * Add a better sample god config file in example/thin.god that loads all info from config
   files in /etc/thin. Drop-in replacement for the thin runlevel service [Gump].
 * Add support for specifying a custom Connector to the server and add more doc about Server
   configuration.
 * Add a script to run thin as a runlevel service that can start at startup, closes #31 [Gump]
   Setup the service like this:
   
     sudo thin install /etc/thin
   
   This will install the boot script under /etc/init.d/thin. Then copy your config files to
   /etc/thin. Works only under Linux.
 * Set process name to 'thin server (0.0.0.0:3000)' when running as a daemon, closes #32.
 * Make sure chdir option from config file is used when present.
 * Raise an error when starting a server as a daemon and pid file already exist, fixes #27.

== 0.6.2 Rambo release
 * Server now let current connections finish before stopping, fixes #18
 * Fix uploading hanging bug when body is moved to a tempfile,
   also delete the tempfile properly upon completion, fixes #25