@@ -1,4 +1,5 @@
 == 0.7.0 Bionic Pickle release
+ * Fix -s option not being included in generated config file, fixes #37.
  * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script,
    closes #28 [Alex MacCaw]
 
